--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 layout: default
 title: homepage
 --
-
+{{ content }}
   <h1>Hi my name is Maria<br>and this is my website.</h1>
   <p class="homepage">No, really. I wrote the code myself.<br>I'm a writer, translator, and aspiring creator based in many places*.</p>
 
