--- a/about.html
+++ b/about.html
@@ -1,3 +1,19 @@
-layout: default
-title: about
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>about</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
+    <link href="css/welcome.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+    <div class="navigation">
+        <a href="welcome.html">HOME</a>
+        <a href="about.html">ABOUT</a>
+        <a href="work.html">WORK</a> 
+        <a href="contact.html">CONTACT</a>
+    </div>
+</body>
+</html>
