--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="navigation">
-        <a href="welcome.html">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="about.html">ABOUT</a>
         <a href="work.html">WORK</a> 
         <a href="contact.html">CONTACT</a>
