--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   </div>
   </ul>
 	  <h1>Hi my name is Maria<br>and this is my website.</h1>
-    <p class="homepage">No, really. I wrote the code myself.<br>I'm a writer, translator, and aspiring creator based in many places*.</p>
+    <p class="homepage">I'm a writer, translator, and aspiring creator based in many places*.</p>
 </body>
 </html>
