--- a/about.html
+++ b/about.html
@@ -15,5 +15,9 @@
         <a href="work.html">WORK</a> 
         <a href="contact.html">CONTACT</a>
     </div>
+
+    <p>Hi! My name is Maria Puertas. I’ve spent the past few years jumping around digital programs in non-profit organizations 
+    and am always looking to help out the cause (and push things further left). I love cooking, making ceramics, and am 
+    probably somewhere planning a move to Spain.</p>
 </body>
 </html>
