--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a href="contact.html">CONTACT</a>
   </div>
   </ul>
-	  <h1>Hi my name is Maria<br>and this is my website.</h1>
-    <p class="homepage">I'm a writer, translator, and aspiring creator based in many places.</p>
+	  <h1>My name is Maria Puertas</h1>
+    <p class="homepage">I'm a freelance writer and translator for hire.</p>
 </body>
 </html>
