--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
   <div class="navigation">
-    <a href="index.html">HOME</a>
-    <a href="work.html">WORK</a> 
-    <a href="contact.html">CONTACT</a>
+    <a href="index.html">home</a>
+    <a href="work.html">work</a> 
+    <a href="contact.html">contact</a>
   </div>
   </ul>
 	  <h1 class="name">My name is Maria Puertas</h1>
