--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="contact.html">contact</a>
   </div>
   </ul>
-	  <h1 class="name">My name is Maria Puertas</h1>
+	  <h1 class="name">My name is Maria Puertas 🍊</h1>
     <p class="homepage">I'm a freelance writer and translator for hire.</p>
 </body>
 </html>
