--- a/work.html
+++ b/work.html
@@ -10,11 +10,10 @@
 </head>
 <body>
     <div class="navigation">
-        <a href="index.html">HOME</a>
-        <a href="about.html">ABOUT</a>
-        <a href="work.html">WORK</a> 
-        <a href="contact.html">CONTACT</a>
-    </div>
+    <a href="index.html">home</a>
+    <a href="work.html">work</a> 
+    <a href="contact.html">contact</a>
+  </div>
    <p></p>
 </body>
 </html>
