--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,10 @@
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div class="navigation">
-        <a href="index.html">HOME</a>
-        <a href="about.html">ABOUT</a>
-        <a href="work.html">WORK</a> 
-        <a href="contact.html">CONTACT</a>
-    </div>
+  <div class="navigation">
+    <a href="index.html">home</a>
+    <a href="work.html">work</a> 
+    <a href="contact.html">contact</a>
+  </div>
 </body>
 </html>
