--- a/work.html
+++ b/work.html
@@ -15,5 +15,6 @@
     <a href="contact.html">contact</a>
   </div>
    <p></p>
+    <p> Argentina Abortion Vote: Senate Rejects Bill 38 to 31 - <i>Teen Vogue</i> </p>
 </body>
 </html>
