--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,6 @@
     <a href="work.html">work</a> 
     <a href="contact.html">contact</a>
   </div>
-    <p>you can reach me at mariapuertas (at) nyu (dot) edu</p>
+    <p class="contactpage">you can reach me at mariapuertas (at) nyu (dot) edu</p>
 </body>
 </html>
