--- a/work.html
+++ b/work.html
@@ -14,6 +14,6 @@
     <a href="work.html">work</a> 
     <a href="contact.html">contact</a>
   </div>
-   <link href="https://www.teenvogue.com/story/argentina-abortion-vote" class="workbody">Argentina Abortion Vote: Senate Rejects Bill 38 to 31 - <i>Teen Vogue</i> </p>
+   <a href="https://www.teenvogue.com/story/argentina-abortion-vote" class="workbody">Argentina Abortion Vote: Senate Rejects Bill 38 to 31 - <i>Teen Vogue</i> </a>
 </body>
 </html>
