--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   </div>
   </ul>
 	<h1 class="name">My name is Maria Puertas 🍊</h1>
-	<p class="homepage">I'm a freelance writer and translator for hire.</p>
+	<p class="homepage">I'm a freelance copywriter and translator for hire.</p>
 </body>
 </html>
