--- a/work.html
+++ b/work.html
@@ -14,6 +14,8 @@
     <a href="work.html">work</a> 
     <a href="contact.html">contact</a>
   </div>
+    <p class="header">Editorial</p>
    <a href="https://www.teenvogue.com/story/argentina-abortion-vote" class="workbody" target="_blank">Argentina Abortion Vote: Senate Rejects Bill 38 to 31 - <i>Teen Vogue</i> </a>
-</body>
+    <p class="header">Social</p>
+    </body>
 </html>
