--- a/work.html
+++ b/work.html
@@ -19,5 +19,9 @@
     <br>
     <br>
     <p class="header">Social</p>
+    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Without their knowledge, young people of color in Boston go about their lives earning “points” in the Police Department’s gang database. <a href="https://t.co/nLNqX4c7tE">https://t.co/nLNqX4c7tE</a></p>&mdash; ACLU (@ACLU) <a href="https://twitter.com/ACLU/status/1069368614749421574?ref_src=twsrc%5Etfw">December 2, 2018</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">🚨 Update on our family separation case:<br>The Trump administration failed to meet the deadline to reunite all kids under 5. We’ve asked the court for specific remedies to ensure this does not happen again. <br><br>We won&#39;t allow the government to waste time. <a href="https://twitter.com/hashtag/FamiliesBelongTogether?src=hash&amp;ref_src=twsrc%5Etfw">#FamiliesBelongTogether</a></p>&mdash; ACLU (@ACLU) <a href="https://twitter.com/ACLU/status/1017556853226655744?ref_src=twsrc%5Etfw">July 12, 2018</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">BREAKING: Michigan just voted for sweeping election reforms. The state now has:<br><br>📝 automatic voter registration<br>📝 same-day registration<br>📝 post-election audits<br>📝 no-excuse absentee voting<br>📝 straight-ticket voting<br>📝 protections for military and overseas voters<br><br>This is big. <a href="https://t.co/C0KTxA4XwK">pic.twitter.com/C0KTxA4XwK</a></p>&mdash; ACLU (@ACLU) <a href="https://twitter.com/ACLU/status/1060029865682964481?ref_src=twsrc%5Etfw">November 7, 2018</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    
     </body>
 </html>
