--- a/work.html
+++ b/work.html
@@ -15,7 +15,7 @@
     <a href="contact.html">contact</a>
   </div>
     <p class="header">Editorial</p>
-   <a href="https://www.teenvogue.com/story/argentina-abortion-vote" class="workbody" target="_blank">Argentina Abortion Vote: Senate Rejects Bill 38 to 31 - <i>Teen Vogue</i> </a>
+   <a href="https://www.teenvogue.com/story/argentina-abortion-vote" class="workbody" target="_blank" style="text-align:center">Argentina Abortion Vote: Senate Rejects Bill 38 to 31 - <i>Teen Vogue</i> </a>
     <br>
     <br>
     <p class="header">Social</p>
