--- a/work.html
+++ b/work.html
@@ -33,5 +33,7 @@
     <br>
     <blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">Together we can create an America where every culture is accepted, loved, and celebrated. <a href="https://twitter.com/hashtag/EstoyConElla?src=hash&amp;ref_src=twsrc%5Etfw">#EstoyConElla</a> <a href="https://t.co/LXww8iGv3z">https://t.co/LXww8iGv3z</a></p>&mdash; Tim Kaine (@timkaine) <a href="https://twitter.com/timkaine/status/778985757977501696?ref_src=twsrc%5Etfw">September 22, 2016</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <br>
+    <blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">Suppressing minority voters isn&#39;t a political strategy. It&#39;s institutionalizing racism. <a href="https://t.co/ocoV2rWLwa">https://t.co/ocoV2rWLwa</a></p>&mdash; Tom Perez (@TomPerez) <a href="https://twitter.com/TomPerez/status/885278676543315968?ref_src=twsrc%5Etfw">July 12, 2017</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <br>
     </body>
 </html>
